--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,15 @@ license = "Apache-2.0"
 version = "1.4.2"
 default-features = false
 features = ["linux-shared-hidraw"]
+
+[dependencies.windows]
+version = "0.39.0"
+features = [
+    "Foundation_Collections",
+    "System_Diagnostics",
+    "Win32_Foundation",
+    "Win32_System_Com",
+    "Win32_System_Com_StructuredStorage",
+    "Win32_Media_Audio",
+    "Win32_Media_Audio_Endpoints",
+]
